# Project_5_OpenClassrooms_Data_Engineer

./: .env  .env.secrets  .gitignore  Dockerfile  Dockerfile.export  Dockerfile.test  README.md  architecture_projet5 (1).pptx  architecture_projet5.pptx  docker-compose.yml  mongo-init.js  notebook_projet_5.ipynb  presentation_projet5.pptx  presentation_projet5_datasolutech.pptx  pyproject.toml  requirements.txt  ulesie_sebastien_2_presentation_042026.pptx  ulesie_sebastien_2_presentation_062026.pptx  ~$presentation_projet5_datasolutech.pptx
.ipynb_checkpoints/: README-checkpoint.md  connexion_mongodb-checkpoint.py  export_from_mongodb-checkpoint.py  notebook_projet_5-checkpoint.ipynb  script_migration_csv_mongodb-checkpoint.py  test_cleaning_df-checkpoint.py  test_create_index_mongodb-checkpoint.py  test_crud_mongodb-checkpoint.py  test_export_mongodb-checkpoint.py  test_migration_index_mongodb-checkpoint.py
donnees/: export.csv  export_healthcare_data_bill_negatif.csv  healthcare_dataset_test.csv  healthcare_dataset_test_vide.csv
fonctions/: cleaning_df.py  crud_mongodb.py  export_from_mongodb.py  migration_to_mongodb.py
fonctions/.ipynb_checkpoints/: cleaning_df-checkpoint.py  create_index_mongodb-checkpoint.py  crud_mongodb-checkpoint.py  export_from_mongodb-checkpoint.py  migration_to_mongodb-checkpoint.py  parser_liste_env-checkpoint.py
scripts/: script_delete_collection_mongodb.py  script_export_csv_mongodb.py  script_migration_csv_mongodb.py
tests/: test_cleaning_df.py  test_crud_mongodb.py  test_export_mongodb.py  test_migration_index_mongodb.py
(+7 files in other folders)
