[project]
name = "projet-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
